# foxhole

./: Cargo.toml  README.md
foxhole/: .gitignore  README.md
foxhole/src/: main.rs
src/: anti_debug.rs  anti_vm.rs  connection.rs  connection_methods.rs  defense_evasion.rs  encryption.rs  main.rs  network_stealth.rs  obfuscation.rs  persistence.rs
